<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">InputTest</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="start_test">开始测试</string>
    <string name="stop_test">停止测试</string>
    <string name="call_js">调用JS</string>
    <string name="call_js_with_para">调用有参JS</string>
    <string name="one">1</string>
    <string name="tab_fir_name">tab_one</string>
    <string name="coocaa_test_channelname">东方卫视</string>
    <string name="keycode_del">67</string> <!-- 删除 -->
    <string name="keycode_back">4</string> <!-- 返回 -->
     <string name="keycode_center">66</string> <!-- 回车 -->
      <string name="keycode_space">62</string> <!-- 空格 -->
      <string name="keycode_left">21</string> <!-- 左边 -->
      <string name="keycode_right">22</string> <!-- 右边 -->
      <string name="keyboard_english">英文键盘</string> <!-- 右边 -->
      <string name="keyboard_total">全键盘</string> <!-- 右边 -->
      <string name="keyboard_number">数字键盘</string> <!-- 右边 -->
      <string name="keyboard_t9">T9键盘</string> <!-- 右边 -->
      <string name="upper_case">10000</string> <!-- 右边 -->
      <string name="chn_eng">10001</string> <!-- 右边 -->
      <string name="switch_num">10002</string> <!-- 右边 -->
      
</resources>