<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >
	
    <TextView
        android:id="@+id/input_tv"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:gravity="center_vertical"
        android:textSize="25sp" />

    <com.skyworth.inputtest.softkeyboard.SkbContainer
        android:id="@+id/skbContainer"
        android:layout_width="match_parent"
        android:layout_height="500dp" >
    </com.skyworth.inputtest.softkeyboard.SkbContainer>
	
    <!-- 键盘切换测试 -->
    <LinearLayout
        android:layout_weight="1"
        android:layout_width="match_parent"
        android:layout_height="80dp"
        android:layout_marginBottom="0dp"
        android:orientation="horizontal" >

        <Button
            android:id="@+id/en_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_english" />

        <Button
            android:id="@+id/num_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_number" />
		
        <Button
            android:id="@+id/all_key_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_total" />

        <Button
            android:id="@+id/t9_key_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/keyboard_t9" />
    </LinearLayout>

</LinearLayout>